# Bot

./: .env  .gitignore  README.md  bot.py  bot_ui.py  config.yaml  file_manager.py  main.py  memory_game_flowchart  pdf_converter.py  pyproject.toml  python.py  requirements-dev.txt  requirements.txt  tox.ini
595169496/: Курсовая Чухнов 2025.docx
613036210/: Пример оформления отчёта.docx
bot_ui/: bot_ui_keyboards.py  bot_ui_messages.py  bot_ui_ui_factory.py
telegram_bot/: bot_ui.py  config_loader.py  constants.py  docx_processor.py  file_manager.py  main.py  pdf_converter.py  setup.py
telegram_bot.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_docx_processor.py  test_file_manager.py  test_pdf_converter.py  test_ui_messages.py
